# askpanda-atlas-agents

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCSTRING_IMPROVEMENTS.md  README-cric_agent.md  README-document_monitor_agent.md  README-github_doc_sync_agent.md  README-ingestion_agent.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
scripts/: bump_version.py
src/askpanda_atlas_agents/: __init__.py
src/askpanda_atlas_agents/agents/: __init__.py  base.py
src/askpanda_atlas_agents/agents/cric_agent/: __init__.py  agent.py  cli.py  cric-agent.yaml  cric_fetcher.py  schema_annotations.py
src/askpanda_atlas_agents/agents/document_monitor_agent/: __init__.py  agent.py  cli.py  embedder_langchain_hf.py  storage.py  utils.py
src/askpanda_atlas_agents/agents/dummy_agent/: __init__.py  agent.py  cli.py
src/askpanda_atlas_agents/agents/ingestion_agent/: agent.py  cli.py
src/askpanda_atlas_agents/common/panda/: source.py
src/askpanda_atlas_agents/common/storage/: duckdb_store.py
src/askpanda_atlas_agents/resources/config/: example_queue.json  ingestion-agent.yaml
src/bamboo_mcp_services/agents/cric_agent/: cli.py  cric_fetcher.py
src/bamboo_mcp_services/agents/document_monitor_agent/: agent.py  cli.py  storage.py
src/bamboo_mcp_services/agents/github_doc_sync_agent/: __init__.py  agent.py  cli.py  github_doc_syncer.py  github_markdown_sync.py
src/bamboo_mcp_services/agents/ingestion_agent/: bigpanda_jobs_fetcher.py  cli.py
src/bamboo_mcp_services/common/: __init__.py  cli.py
src/bamboo_mcp_services/common/panda/: __init__.py
src/bamboo_mcp_services/common/storage/: __init__.py  duckdb_store.py
src/bamboo_mcp_services/resources/config/: github-doc-sync-agent.yaml
tests/: test_duckdb_store.py
tests/agents/: test_base_agent.py
tests/agents/cric_agent/: test_cric_agent.py
tests/agents/dummy_agent/: test_dummy_agent.py
tests/agents/github_doc_sync_agent/: test_github_doc_sync_agent.py
tests/agents/ingestion_agent/: test_bigpanda_jobs_fetcher.py  test_ingestion_agent.py
